quiz: Fix answers not wrapping

--- a/pemFioi/quiz/quizStyles-0.1.css
+++ b/pemFioi/quiz/quizStyles-0.1.css
@@ -107,13 +107,13 @@ answer .answer-block {
   border: 1px solid transparent;
   border-radius: 20px;
   transition: all linear 50ms;
+  justify-content: space-between;
 }
 answer.selected .answer-block {
   color: #4a90e2;
   border-color: #4a90e2;
 }
 answer .answer-label {
-  flex: 1 0 auto;
   line-height: 1.5em;
   transition: all linear 50ms;
 }
@@ -204,6 +204,7 @@ question.horizontal answer .answer-code {
   cursor: pointer;
   align-self: center;
   box-shadow: 0 1px 0 0 #727273 inset;
+  flex: 0 0 auto;
 }
 .answer-switch::before,
 .answer-switch::after {
